--- a/frontend/angularproj/src/app/app.component.html
+++ b/frontend/angularproj/src/app/app.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary">
-  <span>My Application</span>
+  <span>Lista Telefonica</span>
 </mat-toolbar>
 <router-outlet></router-outlet>
