--- a/frontend/angularproj/src/app/pages/list/list.component.scss
+++ b/frontend/angularproj/src/app/pages/list/list.component.scss
@@ -1,3 +1,14 @@
 table{
     width: 100%;
 }
+
+.buttons{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    button{
+        margin-right: 10px;
+    }
+}
