--- a/frontend/angularproj/src/app/pages/list/list.component.html
+++ b/frontend/angularproj/src/app/pages/list/list.component.html
@@ -1,3 +1,49 @@
+<ng-template #edit-modal let-modal>
+  <div class="modal">
+    <div class="modal-body">
+
+      <form [formGroup]="formGroup">
+      <div class="form-group">
+        <label for="name-input">Nome</label>
+        <input type="text" id="name-input" class="form-control" name="name-input" formControlName="name" [ngClass]="{
+          'is-invalid': this.editFormGroup.controls.name.errors
+          }">
+        <div class="invalid-feedback">
+          <p *ngIf="this.editFormGroup.controls.name.errors?.required">
+            O campo nome é necessário.
+          </p>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="tel-input">Telefone</label>
+        <input type="text" id="tel-input" class="form-control" name="tel-input" formControlName="contactNumber"
+          placeholder="(00) 0 0000-0000" mask="(00) 0000-0000||(00) 0 0000-0000" [ngClass]="{
+            'is-invalid': this.editFormGroup.controls.contactNumber.errors
+        }">
+        <div class="invalid-feedback">
+          <p *ngIf="this.editFormGroup.controls.contactNumber.errors?.required">
+            O campo telefone é necessário.
+          </p>
+          <p *ngIf="this.editFormGroup.controls.contactNumber.errors?.minlength">
+            O campo telefone deve conter entre 10 e 11 caractéres.
+          </p>
+        </div>
+      </div>
+
+      <button class="btn btn-primary" (click)="modal.dismiss()">Cancelar</button>
+      <button class="btn btn-primary" (click)="modal.close()">Cadastrar</button>
+
+    </div>
+
+    </form>
+  </div>
+ <div class="modal-footer">
+      <button class="btn btn-outline-primary" (click)="modal.dismiss()">Cancelar</button>
+      <button class="btn btn-primary" (click)="modal.close()" [disabled]="this.editFormGroup.invalid">Cadastrar</button>
+    </div>
+</ng-template>
+
+
 <div class="buttons">
 <button routerLink="/register" mat-fab color="primary" aria-label="Example icon button with a bookmark icon">
           <mat-icon>bookmark</mat-icon>
@@ -30,7 +76,7 @@
   <!-- Symbol Column -->
   <ng-container matColumnDef="buttons">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
-    <td mat-cell *matCellDef="let element"> <button (click)="edit()" mat-icon-button aria-label="Example icon button with a vertical three dot icon" color="primary">
+    <td mat-cell *matCellDef="let element"> <button (click)="open(content, element)" mat-icon-button aria-label="Example icon button with a vertical three dot icon" color="primary">
         <mat-icon>edit</mat-icon>
       </button>
       <button (click)="delete()" mat-icon-button aria-label="Example icon button with a vertical three dot icon" color="danger">
@@ -42,3 +88,4 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
