Ajustes FrontEnd Final

--- a/frontend/angularproj/src/app/pages/list/list.component.html
+++ b/frontend/angularproj/src/app/pages/list/list.component.html
@@ -1,4 +1,8 @@
-<ng-template #edit-modal let-modal>
+<ng-template #contact let-modal>
+<div class="modal-header">
+<h2 class="modal-title">Edição</h2>
+ <button type="button" class="close" (click)="modal.dismiss()"><span>&times;</span></button>
+</div>
   <div class="modal">
     <div class="modal-body">
 
